Fixed collapse content styles

--- a/src/app/styles/components/collapse-content.module.css
+++ b/src/app/styles/components/collapse-content.module.css
@@ -5,6 +5,8 @@
     border: none;
     cursor: pointer;
     font-family: inherit;
+    text-align: center;
+    margin-left: 0;
 }
 
 .expand-button:hover {
@@ -20,6 +22,7 @@
     width: 100%;
     height: 100%;
     margin: auto;
+    margin-left: 0;
 }
 
 .container-children {
@@ -29,7 +32,34 @@
     background-color: #21212165;
 }
 
+.span-container {
+    display: flex;
+    align-items: center;
+    margin: auto;
+    margin-left: 0;
+}
+
 .text-span {
     font-family: inherit;
     color: #FFFFFF;
+}
+
+.image-span {
+    margin-top: 8px;
+    margin-left: -12px;
+    padding-right: 4px;
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(2%) hue-rotate(266deg) brightness(106%) contrast(101%);
+}
+
+@media screen and (max-width:500px){
+    .image-span {
+        margin-left: -4px;
+    }
+}
+
+@media screen and (max-width:300px){
+    .image-span {
+        margin-left: 0px;
+        padding-right: 1px;
+    }
 }
